<resources>
    <string name="app_name">FollowMoney</string>
    <string name="title_activity_main2">Follow Money</string>

    <string name="action_settings">Settings</string>
    <string name="Add_New">Novo</string>
    <string name="edit">Editar</string>
    <string name="delete">Excluir</string>
    <string name="save">Salvar</string>

    <!-- generic-->
    <string name="descricao">Descrição</string>
    <string name="yes">Confirmar</string>
    <string name="no">Cancelar</string>
    <string name="title_activity_activity_edit">CreateOrEditActivity</string>
    <string name="title_activity_main">Follow Money</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- finality -->
    <string name="deleteFinalidade">Confirme a exclusão.</string>
    <string name="title_chart_finality_fragment">Gastos por finalidade (%)</string>

    <!-- credit card-->
    <string name="limit">Limite</string>
    <string name="date_closing_invoice">Fechamento fatura</string>
    <string name="date_maturity_invoice">Vencimento fatura</string>


    <!-- bank account -->
    <string name="status">Situação</string>
    <string name="number">Número</string>
    <string name="digit">Dígito</string>
    <string name="extract">Extrato</string>
    <string name="extract_bank_account">Extrato de Conta Bancária</string>
    <string name="status_active">ATIVO</string>
    <string name="status_inactive">INATIVO</string>
    <string name="type">Tipo</string>
    <string name="type_bank_account">Conta Bancária</string>
    <string name="type_wallet">Carteira</string>

    <!-- movement -->
    <string name="status_payd">Pago</string>
    <string name="status_to_pay">A pagar</string>
    <string name="debit">Débito</string>
    <string name="credit">Crédito</string>
    <string name="balance">Saldo</string>
    <string name="operation">Operação</string>
    <string name="date_emission">Emissão</string>
    <string name="date_maturity">Vencimento</string>
    <string name="finality">Finalidade</string>
    <string name="bank_account">Conta Bancária</string>
    <string name="credit_card">Cartão de Crédito</string>
    <string name="payment_method">Pagamento Selecionado</string><string name="value">Valor</string>
    <string name="movement_detail">Detalhe do Movimento</string>
    <string name="payment_money">Dinheiro</string>
    <string name="payment_bank">Conta Bancária</string>
    <string name="payment_credit_card">Cartão Crédito</string>
    <string name="payment_form_selected">Forma de pagamento selecionada</string>
    <string-array name="months">
        <item>JAN</item>
        <item>FEV</item>
        <item>MAR</item>
        <item>ABR</item>
        <item>MAI</item>
        <item>JUN</item>
        <item>JUL</item>
        <item>AGO</item>
        <item>SET</item>
        <item>OUT</item>
        <item>NOV</item>
        <item>DEZ</item>
    </string-array>

    <!-- payment Form -->
    <string name="initials">Sigla</string>
    <string name="payment_form">Forma de pagamento</string>

    <!-- credit card invoice -->
    <string name="referenceMonth">Mês Referência</string>
    <string name="credit_card_invoices">Faturas do Cartão de Crédito</string>
    <string name="movements_of_invoice">Movimentos da Fatura</string>
    <string name="unpay_invoice">Reabrir fatura</string>

    <!-- account tranfer form -->
    <string name="bank_account_origin">Conta origem</string>
    <string name="bank_account_destiny">Conta destino</string>

    <!-- search movement form -->
    <string name="description_finalitie">Descrição/Finalidade</string>


</resources>
