<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="br.com.followmoney.activities.bankAccounts.BankAccountCreateOrEditActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/textViewDescricao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/descricaoEditText"
            android:layout_alignParentLeft="true"
            android:layout_toRightOf="@+id/descricaoEditText"
            android:text="@string/descricao" />

        <EditText
            android:id="@+id/descricaoEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textAllCaps="true"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:inputType="textCapCharacters">

            <requestFocus />
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/numeroEditText"
            android:layout_alignParentLeft="true"
            android:layout_toRightOf="@+id/numeroEditText"
            android:text="@string/number" />

        <EditText
            android:id="@+id/numeroEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:inputType="number">
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/digitoEditText"
            android:layout_alignParentLeft="true"
            android:layout_toRightOf="@+id/digitoEditText"
            android:text="@string/digit" />

        <EditText
            android:id="@+id/digitoEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:inputType="number">
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/situacaoSpinner"
            android:layout_alignParentLeft="true"
            android:layout_toRightOf="@+id/situacaoSpinner"
            android:text="@string/status" />

        <Spinner
            android:id="@+id/situacaoSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:entries="@array/status_option"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:padding="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

        <Button
            android:id="@+id/saveButton"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:padding="@dimen/activity_vertical_margin"
            android:text="@string/save"
            android:onClick="run"
            android:visibility="gone"/>

        <Button
            android:id="@+id/deleteButton"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:padding="@dimen/activity_vertical_margin"
            android:text="@string/delete" />

    </LinearLayout>

</RelativeLayout>